--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.486.0",
+    "motion": "^12.6.3",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
