--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^5.5.0",
     "react-image-lightbox": "^5.1.4",
     "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "yet-another-react-lightbox": "^3.22.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
